# fluss-rust

./: .asf.yaml  .gitignore  .licenserc.yaml  Cargo.toml  NOTICE  README.md  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  task.yml
.github/workflows/: ci.yml  wheels.yml
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/example/: example.py  lance_on_minio.py  load_from_minio.py  new_example.py  write_a_pic.py
bindings/python/python/fluss_python/: __init__.py  __init__.pyi  py.typed
bindings/python/src/: admin.rs  config.rs  connection.rs  error.rs  lib.rs  table.rs  types.rs  utils.rs
crates/examples/: Cargo.toml
crates/examples/src/: example_table.rs
crates/fluss/: Cargo.toml
crates/fluss/src/: build.rs  config.rs  error.rs  lib.rs
crates/fluss/src/client/: admin.rs  connection.rs  metadata.rs  mod.rs
crates/fluss/src/client/table/: append.rs  mod.rs  scanner.rs  writer.rs
crates/fluss/src/client/write/: accumulator.rs  batch.rs  broadcast.rs  bucket_assigner.rs  mod.rs  sender.rs  writer_client.rs
crates/fluss/src/cluster/: cluster.rs  mod.rs
crates/fluss/src/metadata/: database.rs  datatype.rs  json_serde.rs  mod.rs  table.rs
crates/fluss/src/proto/: fluss_api.proto
crates/fluss/src/record/: arrow.rs  error.rs  mod.rs
crates/fluss/src/row/: column.rs  datum.rs  mod.rs
crates/fluss/src/rpc/: api_key.rs  api_version.rs  convert.rs  error.rs  frame.rs  mod.rs  server_connection.rs  transport.rs
crates/fluss/src/rpc/message/: create_database.rs  create_table.rs  database_exists.rs  drop_database.rs  drop_table.rs  fetch.rs  get_database_info.rs  get_latest_lake_snapshot.rs  get_table.rs  header.rs  list_databases.rs  list_offsets.rs  list_tables.rs  mod.rs  produce_log.rs  table_exists.rs  update_metadata.rs
crates/fluss/src/util/: mod.rs
crates/fluss/tests/: test_fluss.rs
crates/fluss/tests/integration/client/: mod.rs
