# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "fluss_python"
edition = "2024"
version = "0.1.0"
license = "apache-2.0"
rust-version = "1.85"

[lib]
name = "fluss_python"
crate-type = ["cdylib"]

[workspace]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
fluss = { path = "../../crates/fluss" }
tokio = { version = "1.44.2", features = ["full"] }
arrow = "55.1.0"
arrow-pyarrow = "55.1.0"
pyo3-async-runtimes = { version = "0.24.0", features = ["tokio-runtime"] }
chrono = "0.4.41"
once_cell = "1.21.3"
